资料/MT设备/二次开发例程及接口文件V3.16.2/接口文件3.16.2/3.16.2_Multi/64bit/MT_API.pas


//软件限位
//设置软件限位值
function MT_Set_Axis_Software_Limit_Neg_Value
   (ADev:Integer;AObj:Word;Value:Integer):Integer;stdcall; external 'MT_API.dll'
//设置软件限位值
function MT_Set_Axis_Software_Limit_Pos_Value
   (ADev:Integer;AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
//使能软件限位模式
function MT_Set_Axis_Software_Limit_Enable(ADev:Integer;AObj:Word):Integer;stdcall;external 'MT_API.dll'
//停止软件限位模式
function MT_Set_Axis_Software_Limit_Disable(ADev:Integer;AObj:Word):Integer;stdcall;external 'MT_API.dll'
//直线插补相关
//设置直线插补主轴及速度
function MT_Set_Axis_Line_Axis(ADev:Integer;AObj:Word;Axis_ID0,Axis_ID1:Integer):Integer;stdcall;external 'MT_API.dll'
//设置直线插补加速度
function MT_Set_Axis_Line_Acc(ADev:Integer;AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
//设置直线插补减速度
function MT_Set_Axis_Line_Dec(ADev:Integer;AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
//设置直线插补速度
function MT_Set_Axis_Line_V(ADev:Integer;AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
//设置直线插补启动
function MT_Set_Axis_Line_Run(ADev:Integer;AObj:Word):Integer;stdcall;external 'MT_API.dll'
//设置直线插补停止
function MT_Set_Axis_Line_Stop(ADev:Integer;AObj:Word):Integer;stdcall;external 'MT_API.dll'
//设置直线插补急停
function MT_Set_Axis_Line_Halt(ADev:Integer;AObj:Word):Integer;stdcall;external 'MT_API.dll'
//设置直线插补相对移动目标
function MT_Set_Axis_Line_Rel(ADev:Integer;AObj:Word;
    Axis_Target0,Axis_Target1:Integer):Integer;stdcall;external 'MT_API.dll'
//设置直线插补绝对移动目标
function MT_Set_Axis_Line_Abs(ADev:Integer;AObj:Word;
    Axis_Target0,Axis_Target1:Integer):Integer;stdcall;external 'MT_API.dll'
//设置直线插补启动
function MT_Set_Axis_Line_Run_Rel(ADev:Integer;AObj:Word;
    Axis_Target0,Axis_Target1:Integer):Integer;stdcall;external 'MT_API.dll'
function MT_Set_Axis_Line_Run_Abs(ADev:Integer;AObj:Word;
    Axis_Target0,Axis_Target1:Integer):Integer;stdcall;external 'MT_API.dll'
//读取直线插补模块
function MT_Get_Axis_Line_Num(ADev:Integer;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
//插补运动状态
function MT_Get_Axis_Line_Status(ADev:Integer;AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
//插补轴
function MT_Get_Axis_Line_Axis(ADev:Integer;AObj:Word;pID0,pID1:PInteger):Integer;stdcall;external 'MT_API.dll'
//插补加速度
function MT_Get_Axis_Line_Acc(ADev:Integer;AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
//插补减速度
function MT_Get_Axis_Line_Dec(ADev:Integer;AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
//插补速度
function MT_Get_Axis_Line_V(ADev:Integer;AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'

//AD输入
function MT_Get_AD_Num(ADev:Integer;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
function MT_Get_AD_Data(ADev:Integer;AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
function MT_Get_Board_T(ADev:Integer;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'

//================================================================
//圆弧插补
//================================================================
//设置圆弧插补主轴及速度
function MT_Set_Axis_Circle_Axis(ADev:Integer;AObj:Word;Axis_ID0,Axis_ID1:Integer):Integer;stdcall;external 'MT_API.dll'
//设置圆弧插补加速度
function MT_Set_Axis_Circle_Acc(ADev:Integer;AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
//设置圆弧插补减速度
function MT_Set_Axis_Circle_Dec(ADev:Integer;AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
//设置圆弧插补速度
function MT_Set_Axis_Circle_V(ADev:Integer;AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'

//设置圆弧插补启动 顺时钟  圆心坐标模式
function MT_Set_Axis_Circle_R_CW_Run_Rel(ADev:Integer;AObj:Word;AR:Integer;
                  Axis_Target0,Axis_Target1:Integer):Integer;stdcall;external 'MT_API.dll'
function MT_Set_Axis_Circle_R_CW_Run_Abs(ADev:Integer;AObj:Word;AR:Integer;
                  Axis_Target0,Axis_Target1:Integer):Integer;stdcall;external 'MT_API.dll'
//设置圆弧插补启动 逆时钟   圆心坐标
function MT_Set_Axis_Circle_R_CCW_Run_Rel(ADev:Integer;AObj:Word;AR:Integer;
                  Axis_Target0,Axis_Target1:Integer):Integer;stdcall;external 'MT_API.dll'
function MT_Set_Axis_Circle_R_CCW_Run_Abs(ADev:Integer;AObj:Word;AR:Integer;
                  Axis_Target0,Axis_Target1:Integer):Integer;stdcall;external 'MT_API.dll'
//设置圆弧插补停止
function MT_Set_Axis_Circle_Stop(ADev:Integer;AObj:Word):Integer;stdcall;external 'MT_API.dll'
//设置圆弧插补急停
function MT_Set_Axis_Circle_Halt(ADev:Integer;AObj:Word):Integer;stdcall;external 'MT_API.dll'

//读取圆弧插补模块
function MT_Get_Axis_Circle_Num(ADev:Integer;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
//插补运动状态
function MT_Get_Axis_Circle_Status(ADev:Integer;AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
//插补轴
function MT_Get_Axis_Circle_Axis(ADev:Integer;AObj:Word;pID0,pID1:PInteger):Integer;stdcall;external 'MT_API.dll'
//插补加速度
function MT_Get_Axis_Circle_Acc(ADev:Integer;AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
//插补减速度
function MT_Get_Axis_Circle_Dec(ADev:Integer;AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
//插补速度
function MT_Get_Axis_Circle_V(ADev:Integer;AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'

//PLC相关的函数
//PLC相关的指令码
//读变量存储器大小
function MT_Get_PLC_Var_Num(ADev:Integer;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
//读变量
function MT_Get_PLC_Var_Data(ADev:Integer;AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
//写变量
function MT_Set_PLC_Var_Data(ADev:Integer;AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
//暂停PLC
function MT_Set_PLC_Pause(ADev:Integer):Integer;stdcall;external 'MT_API.dll'
//停止PLC
function MT_Set_PLC_Stop(ADev:Integer):Integer;stdcall;external 'MT_API.dll'
//启动PLC程序
function MT_Set_PLC_Run(ADev:Integer):Integer;stdcall;external 'MT_API.dll'
//设置PLC程序代码
function MT_Set_PLC_Data(ADev:Integer;AObj:Word;Value:Byte):Integer;stdcall;external 'MT_API.dll'
//读取PLC程序代码大小
function MT_Get_PLC_Code_Size(ADev:Integer;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'

//2017 01 30 PLC V6 Add
//读取任务个数
//PLC任务数
function MT_Get_PLC_Task_Count(
  ADev:Integer;
  pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
//PLC任务状态
function MT_Get_PLC_Task_Status(
  ADev:Integer;
  pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
//变量分割
function MT_Get_PLC_Var_Seg(
  ADev:Integer;
  pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
//变量个数
function MT_Get_PLC_Var_Used(
  ADev:Integer;
  pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
//PLC状态
function MT_Get_PLC_Status(
  ADev:Integer;
  pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
//全局状态
function MT_Get_PLC_Tasks_Status(
  ADev:Integer;
  pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
//Axis Ratio
function MT_Get_PLC_Axis_Ratio(
  ADev:Integer;
  pValue:PSingle):Integer;stdcall;external 'MT_API.dll'
function MT_Get_PLC_Encoder_Ratio(
  ADev:Integer;
  pValue:PSingle):Integer;stdcall;external 'MT_API.dll'
//2014 04 09补充定义 增加起始速度修改 增加多轴联动直线插补
function MT_Set_Axis_Home_V_Start(ADev:Integer;AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
function MT_Set_Axis_Home_Acc(ADev:Integer;AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
function MT_Set_Axis_Home_Dec(ADev:Integer;AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
function MT_Get_Axis_Home_Acc(ADev:Integer;AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
function MT_Get_Axis_Home_Dec(ADev:Integer;AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'

function MT_Set_Axis_Velocity_V_Start(ADev:Integer;AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
function MT_Set_Axis_Velocity_Acc(ADev:Integer;AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
function MT_Set_Axis_Velocity_Dec(ADev:Integer;AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
function MT_Get_Axis_Velocity_Acc(ADev:Integer;AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
function MT_Get_Axis_Velocity_Dec(ADev:Integer;AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'

function MT_Set_Axis_Position_V_Start(ADev:Integer;AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
function MT_Set_Axis_Position_Acc(ADev:Integer;AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
function MT_Set_Axis_Position_Dec(ADev:Integer;AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
function MT_Get_Axis_Position_Acc(ADev:Integer;AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
function MT_Get_Axis_Position_Dec(ADev:Integer;AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'

function MT_Set_Axis_Line_V_Start(ADev:Integer;AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
function MT_Set_Axis_Circle_V_Start(ADev:Integer;AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'

function MT_Set_Axis_Line_X_Run_Rel(ADev:Integer;AObj:Word;
  AAxis_Num:Integer;
  pAxis:PInteger;
  pTarget:PInteger):Integer;stdcall;external 'MT_API.dll'

function MT_Set_Axis_Line_X_Run_Abs(ADev:Integer;AObj:Word;
  AAxis_Num:Integer;
  pAxis:PInteger;
  pTarget:PInteger):Integer;stdcall;external 'MT_API.dll'
function MT_Set_Axis_Line_X_Target_Rel(ADev:Integer;AObj:Word;
  AAxisID:Integer;
  ATarget:Integer):Integer;stdcall;external 'MT_API.dll'
function MT_Set_Axis_Line_X_Target_Abs(ADev:Integer;AObj:Word;
  AAxisID:Integer;
  ATarget:Integer):Integer;stdcall;external 'MT_API.dll'
function MT_Set_Axis_Line_X_Count(ADev:Integer;AObj:Word;
  ANum:Integer):Integer;stdcall;external 'MT_API.dll'
function MT_Set_Axis_Line_X_Axis(ADev:Integer;AObj:Word;
  AAxisID:Integer;
  AAxis:Integer):Integer;stdcall;external 'MT_API.dll'
//流指令模式
//启动Stream
function MT_Set_Stream_Run(ADev:Integer):Integer;stdcall;external 'MT_API.dll'
//停止Stream
function MT_Set_Stream_Stop(ADev:Integer):Integer;stdcall;external 'MT_API.dll'
//暂停Stream
function MT_Set_Stream_Pause(ADev:Integer):Integer;stdcall;external 'MT_API.dll'
//清除Stream
function MT_Set_Stream_Clear(ADev:Integer):Integer;stdcall;external 'MT_API.dll'
//读取剩余空间
function MT_Get_Stream_Space(ADev:Integer;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
//读取总空间
function MT_Get_Stream_Total(ADev:Integer;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
//读取占用空间
function MT_Get_Stream_Count(ADev:Integer;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'

function MT_Set_Stream_Delay(ADev:Integer;Value:Integer):Integer;stdcall;external 'MT_API.dll'
//直线插补运动
//设置直线插补加速度
function MT_Set_Stream_Line_Acc(ADev:Integer;AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
//设置直线插补减速度
function MT_Set_Stream_Line_Dec(ADev:Integer;AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
//设置直线插补速度
function MT_Set_Stream_Line_V_Max(ADev:Integer;AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
//设置直线插补启动速度
function MT_Set_Stream_Line_V_Start(ADev:Integer;AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
//设置直线插补停止
function MT_Set_Stream_Line_Stop(ADev:Integer;AObj:Word):Integer;stdcall;external 'MT_API.dll'
//设置直线插补急停
function MT_Set_Stream_Line_Halt(ADev:Integer;AObj:Word):Integer;stdcall;external 'MT_API.dll'
//启动直线插补
function MT_Set_Stream_Line_X_Run_Rel(ADev:Integer;AObj:Word;
  AAxis_Num:Integer;
  pAxis:PInteger;
  pTarget:PInteger):Integer;stdcall;external 'MT_API.dll'
function MT_Set_Stream_Line_X_Run_Abs(ADev:Integer;AObj:Word;
  AAxis_Num:Integer;
  pAxis:PInteger;
  pTarget:PInteger):Integer;stdcall;external 'MT_API.dll'

